# ciit_checkin

./: README.md  __init__.py  checkin.db  pyproject.toml
config_example/: room_info.yaml  人工智能631.csv  人工智能631a.csv
src/checkin/: __init__.py  admin.html  admin.py  checkin.html  checkinhandler.py  database.py  main.py  manage.html  qrcode-gen.py  qrcode_utils.py  server.py
src/ciit_checkin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
